build-sys: fix gir/vapi warnings with GstPipeline
Add required dependency on gstreamer to fix unresolved GstPipeline
type warning:

<unknown>:: Warning: SpiceClientGLib: (Signal)gst-video-overlay: argument pipeline: Unresolved type: 'GstPipeline'

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -211,7 +211,7 @@ spice_client_glib_gir = gnome.generate_gir(spice_client_glib_lib,
                                            export_packages : 'spice-client-glib-2.0',
                                            extra_args : ['--accept-unprefixed'],
                                            header : 'spice-client.h',
-                                           includes : ['GObject-2.0', 'Gio-2.0'],
+                                           includes : ['GObject-2.0', 'Gio-2.0', 'GstBase-1.0'],
                                            identifier_prefix : 'Spice',
                                            include_directories: spice_gtk_include,
                                            link_with : spice_client_glib_lib,
