build-sys: drop gstvideo option, make it required
GStreamer is being increasingly used by spice-gtk. Let's make it a
core requirement.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Snir Sheriber <ssheribe@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,6 @@ makecheck_simple:
   script:
   - ./autogen.sh --enable-static
         --enable-lz4=no
-        --enable-gstvideo=no
         --enable-webdav=no
         --with-sasl=no
         --with-coroutine=auto
@@ -44,8 +43,7 @@ makecheck_simple:
 
 makecheck_simple-meson:
   script:
-  - meson build -Dauto_features=disabled
-                -Dgstvideo=false || (cat build/meson-logs/meson-log.txt && exit 1)
+  - meson build -Dauto_features=disabled || (cat build/meson-logs/meson-log.txt && exit 1)
   - ninja -C build
   - (cd build && meson test) || (cat build/meson-logs/testlog.txt && exit 1)
 
