meson: switch pulse option to auto feature
libpulse-mainloop-glib depends on libpulse, no need to check for both.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -154,11 +154,9 @@ endif
 
 # pulse
 spice_gtk_has_pulse = false
-if get_option('pulse')
-  deps = ['libpulse', 'libpulse-mainloop-glib']
-  foreach dep : deps
-    spice_glib_deps += dependency(dep)
-  endforeach
+d = dependency('libpulse-mainloop-glib', required: get_option('pulse'))
+if d.found()
+  spice_glib_deps += d
   spice_gtk_config_data.set('HAVE_PULSE', '1')
   spice_gtk_has_pulse = true
 endif
