meson: switch usbredir option to auto feature
Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Snir Sheriber <ssheribe@redhat.com>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -21,8 +21,7 @@ option('builtin-mjpeg',
     description : 'Enable the builtin mjpeg video decoder')
 
 option('usbredir',
-    type : 'boolean',
-    value : true,
+    type : 'feature',
     description : 'Enable usbredir support')
 
 option('polkit',
