build-sys: drop support for libusb < 1.0.16
libusb 1.0.16 was released on 11 Jul 2013, that should be long enough.

From the distro we care about, according to repology, CentOS 6 and
Ubuntu 12.04 have too old libusb (1.0.9rc).

Fwiw, libusb 1.0.23 should hopefully see Windows hotplug
support (https://github.com/libusb/libusb/issues/409).

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
         intltool gtk3-devel gtk-doc gobject-introspection-devel
         cyrus-sasl-devel pulseaudio-libs-devel libjpeg-turbo-devel
         libacl-devel gstreamer1-devel gstreamer1-plugins-base-devel
-        polkit-devel vala lz4-devel opus-devel libgudev-devel
+        polkit-devel vala lz4-devel opus-devel
         pixman-devel libcacard-devel celt051-devel libphodav-devel
         usbutils usbredir-devel libusbx-devel libsoup-devel
         json-glib-devel
