meson: switch introspection option to auto feature
Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -295,8 +295,9 @@ endif
 
 # introspection
 spice_gtk_has_introspection = false
-if get_option('introspection')
-  spice_glib_deps += dependency('gobject-introspection-1.0', version : '>= 0.94')
+d = dependency('gobject-introspection-1.0', version : '>= 0.94', required : get_option('introspection'))
+if d.found()
+  spice_glib_deps += d
   spice_gtk_has_introspection = true
 endif
 
