meson: switch lz4 option to auto feature
Contrary to spice server dependency, spice-gtk doesn't have a known
minimum version requirement.

It looks like all distros we care about have >= v1.7.3
https://repology.org/metapackage/lz4/versions

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -318,13 +318,9 @@ endif
 
 # lz4
 spice_gtk_has_lz4 = false
-if get_option('lz4')
-  lz4_dep = dependency('liblz4', required : false, version : '>= 129')
-  if not lz4_dep.found()
-    lz4_dep = dependency('liblz4', version : '>= 1.7.3')
-  endif
-
-  spice_glib_deps += lz4_dep
+d = dependency('liblz4', required : get_option('lz4'))
+if d.found()
+  spice_glib_deps += d
   spice_gtk_config_data.set('USE_LZ4', '1')
   spice_gtk_has_lz4 = true
 endif
