--- a/meson_options.txt
+++ b/meson_options.txt
@@ -91,8 +91,7 @@ option('opus',
     description: 'Enable Opus audio codec')
 
 option('smartcard',
-    type : 'boolean',
-    value : true,
+    type : 'feature',
     description : 'Enable smartcard support')
 
 option('gtk_doc',
