meson: remove some meson-spice-gtk-doc warnings
../src/./spice-audio.h:22:2: warning: #warning "Only <spice-client.h> can be included directly" [-Wcpp]
 #warning "Only <spice-client.h> can be included directly"
  ^~~~~~~
...

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/doc/reference/meson.build
+++ b/doc/reference/meson.build
@@ -45,6 +45,7 @@ gnome.gtkdoc('spice-gtk',
              gobject_typesfile : files('spice-gtk.types'),
              ignore_headers : ignore_headers,
              include_directories: spice_gtk_include,
+             c_args : '-DSPICE_COMPILATION',
              install : true,
              scan_args : ['--deprecated-guards="SPICE_DISABLE_DEPRECATED"', '--ignore-decorators="G_GNUC_INTERNAL"'],
              src_dir : join_paths(meson.source_root(), 'src'))
