meson: add gtk_doc option
This is based on similar meson code in GStreamer.
(one of the core meson developer, Nirbheek, is also doing the GStreamer
meson build support)

This allows me to install a meson-mingw64 build, with
-Dgtk_doc=disabled, as it fails to build currently for other reasons
which I don't have time to investigate yet.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -382,7 +382,15 @@ add_project_arguments(compiler.get_supported_arguments(spice_gtk_global_cflags),
 subdir('src')
 subdir('tools')
 subdir('tests')
-subdir('doc')
+if build_machine.system() == 'windows'
+  message('Disabling gtk-doc while building on Windows')
+else
+  if find_program('gtkdoc-scan', required : get_option('gtk_doc')).found()
+    subdir('doc')
+  else
+    message('Not building documentation as gtk-doc was not found')
+  endif
+endif
 subdir('data')
 subdir('man')
 subdir('po')
