.gitlab-ci: disable meson auto-features in makecheck_simple-meson
Let's turn explicit true/false options into features.

They can be auto-detected, and turned all enabled/disabled at once:
after the following commits which will turn most of the options into
auto-detected features, all options can be disabled at once using
-Dauto_features=disabled.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,8 @@ makecheck_simple:
 
 makecheck_simple-meson:
   script:
-  - meson build -Dlz4=false
+  - meson build -Dauto_features=disabled
+                -Dlz4=false
                 -Dgstaudio=false
                 -Dgstvideo=false
                 -Dwebdav=false
