build-sys: deprecate the pulseaudio backend
The PulseAudio audio backend is still the default. However, it will be
deprecated in favour of the GStreamer backend in a future release.

Then PulseAudio will be disabled by default, and later on removed.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -559,3 +559,6 @@ AC_MSG_NOTICE([
 
 ])
 SPICE_PRINT_MESSAGES
+
+AS_IF([test "x$enable_pulse" = "xyes"],
+  AC_MSG_WARN([PulseAudio backend is deprecated and will be removed in a future release]))
