--- a/meson.build
+++ b/meson.build
@@ -155,6 +155,7 @@ endif
 spice_gtk_has_pulse = false
 d = dependency('libpulse-mainloop-glib', required: get_option('pulse'))
 if d.found()
+  warning('PulseAudio backend is deprecated and will be removed in a future release')
   spice_glib_deps += d
   spice_gtk_config_data.set('HAVE_PULSE', '1')
   spice_gtk_has_pulse = true
