meson: fix ninja dist, and building from tarball
meson doesn't handle git-version-gen correctly yet (see
meson#688). Let's set the version manually for now.

And a tag version vX.X will also fail to build, version_info[2]
is out of array bounds.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,7 @@
 # project definition
 #
 project('spice-gtk', 'c',
-         version : run_command('build-aux/git-version-gen', '${MESON_SOURCE_ROOT}/.tarball-version', check : true).stdout().strip(),
+         version : '0.36',
          license : 'LGPLv2.1',
          meson_version : '>= 0.49')
 
