--- a/src/meson.build
+++ b/src/meson.build
@@ -8,9 +8,9 @@ spice_gtk_include += [include_directories('.')]
 version_info = meson.project_version().split('.')
 major = '@0@'.format(version_info[0])
 minor = '@0@'.format(version_info[1])
-micro = version_info[2].split('-')[0]
-if micro == ''
-  micro = '0'
+micro = '0'
+if version_info.length() > 2
+  micro = version_info[2].split('-')[0]
 endif
 version_data = configuration_data()
 version_data.set('SPICE_GTK_MAJOR_VERSION', major)
