--- a/po/meson.build
+++ b/po/meson.build
@@ -1,3 +1,3 @@
 i18n = import('i18n')
 i18n.gettext(meson.project_name(),
-             args : '--directory=@0@'.format(meson.source_root()))
+             preset : 'glib')
