Move src/keycodemapdb -> subprojects/keycodemapdb
Follow meson build system conventions.

This will allow meson to handle it as a subproject.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "spice-common"]
 	path = subprojects/spice-common
 	url = ../spice-common.git
-[submodule "src/keycodemapdb"]
-	path = src/keycodemapdb
+[submodule "keycodemapdb"]
+	path = subprojects/keycodemapdb
 	url = https://gitlab.com/keycodemap/keycodemapdb.git
